--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,10 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-  </head>
+<link href="https://fonts.googleapis.com/css?family=Zilla+Slab:300" rel="stylesheet">  </head>
 
   <body>
     <%= yield %>
