--- a/app/assets/stylesheets/user_auth/auth.scss
+++ b/app/assets/stylesheets/user_auth/auth.scss
@@ -100,6 +100,7 @@ li {
 
 .submit-button {
   background-color: #2dbe60;
+  margin-top:10px;
   color: white;
   transition: 0.5s;
 }
@@ -119,6 +120,12 @@ li {
   margin-bottom:10px;
   font-size: 14px;
   letter-spacing: .8px;
+}
+
+.error-message {
+  font-size: 16px;
+  padding:3px;
+  color: #d80000;
 }
 
 a:hover {
