--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
 <link href="https://fonts.googleapis.com/css?family=Zilla+Slab:300" rel="stylesheet">  </head>
-
+<link href="https://fonts.googleapis.com/css?family=Crimson+Text:600" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:600" rel="stylesheet">
   <body>
     <%= yield %>
   </body>
