--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
 <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:600" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Arimo:700" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
   <body>
     <%= yield %>
   </body>
