Major bug fixes, do notes

--- a/app/assets/stylesheets/home/homepage.scss
+++ b/app/assets/stylesheets/home/homepage.scss
@@ -1,5 +1,5 @@
 .home-a-tag {
-  margin-left: 10%;
+  margin-left: 2%;
 }
 
 .home-logo-img {
@@ -54,6 +54,10 @@
   }
   .home-navbar div a {
     display: none;
+  }
+
+  #nav-demo {
+    display: block;
   }
 }
 
