--- a/app/assets/stylesheets/home/homepage.scss
+++ b/app/assets/stylesheets/home/homepage.scss
@@ -48,19 +48,6 @@
   color: #0dc23d;
 }
 
-@media screen and (max-width: 900px) {
-  .home-navbar a:not(:first-child) {
-    display: none;
-  }
-  .home-navbar div a {
-    display: none;
-  }
-
-  #nav-demo {
-    display: block;
-  }
-}
-
 .fa-linkedin, .fa-github {
   font-size: 20px;
 }
@@ -86,21 +73,15 @@
 
 .home-slide {
   float: left;
-  margin-top: 40px;
+  margin-top: 70px;
   margin-left: 5%;
   margin-right: 3.5%;
+  margin-bottom: 50px;
   max-width: 800px;
   padding: 5px;
   padding-right: 40px;
   width: 46%;
   transition: .5s;
-}
-
-.home-slide:hover {
-  background-color: #cccccc;
-  .slider-small {
-    color: black;
-  }
 }
 
 .slider-big {
@@ -125,6 +106,60 @@
   width: 100%;
 }
 
+.home-signup-text {
+  padding-left: 20px;
+  font-family: 'Arimo', sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.splash-container {
+  margin-top: 60%;
+  padding-bottom: 60px;
+  
+  .splash-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+      
+    .splash-img-div {
+        display: block;
+          
+    .splash-img {
+        width: 456px;
+        height: 456px;
+    }
+  }
+
+  .splash-content {
+    max-width: 300px;
+    margin-left: 40px;
+    font-family: 'Nunito Sans', sans-serif;
+      
+    h1 {
+      margin-bottom: 40px; 
+      font-family: 'Arimo', sans-serif;
+      font-size: 26px;
+      font-weight: 700;
+    }
+      
+    .signup-link {
+      margin: 30px;
+      text-decoration: none;
+          
+      span {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 14px;
+        margin-bottom: 5px;
+        text-decoration: none;
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 1160px) {
   .home-slide {
     margin-left: 3.5%;
@@ -134,12 +169,26 @@
   }
 }
 
-.home-signup-text {
-  padding-left: 20px;
-  font-family: 'Arimo', sans-serif;
-  font-size: 25px;
-  font-weight: 700;
-  margin-bottom: 10px;
+@media screen and (max-width: 900px) {
+  .splash-container {
+    margin-top: 100%;
+  }
 }
 
+@media screen and (max-width: 700px) {
+  .splash-container {
+    margin-top: 1000px;
+  }
+}
 
+@media screen and (max-width: 900px) {
+  .home-navbar a:not(:first-child) {
+    display: none;
+  }
+  .home-navbar div a {
+    display: none;
+  }
+  #nav-demo {
+    display: block;
+  }
+}
