--- a/app/assets/stylesheets/main/sidebar.scss
+++ b/app/assets/stylesheets/main/sidebar.scss
@@ -2,10 +2,17 @@
   float: left;
   border: 1px solid black;
   width: 75px;
-  height: 100%;
+  height: 1000px;
+  background-color: rgb(223, 223, 223);
 
   div {
+    margin: 10px 0;
     border: 1px solid blue;
     text-align: center;
+  }
+
+  .sidebar-logo {
+    margin-top: 10px;
+    margin-bottom: 20px;
   }
 }
