--- a/app/assets/stylesheets/user_auth/auth.scss
+++ b/app/assets/stylesheets/user_auth/auth.scss
@@ -9,7 +9,7 @@
   margin-right: auto;
   list-style: none;
   padding: 20px;
-  color: #747474;
+  color: #8a8a8a;
   text-align: center;
   background-color:white;
   border: 1px solid lightgray;
@@ -125,7 +125,7 @@ li {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 600;
-  color: #808080;
+  color: #464646;
   border-bottom: 1px solid #707070;
 }
 
