Add account info div on the bottom of sidebar

--- a/app/assets/stylesheets/home/homepage.scss
+++ b/app/assets/stylesheets/home/homepage.scss
@@ -137,6 +137,7 @@
     max-width: 300px;
     margin-left: 40px;
     font-family: 'Nunito Sans', sans-serif;
+    font-size: 17px;
       
     h1 {
       margin-bottom: 40px; 
