--- a/app/assets/stylesheets/main/sidebar.scss
+++ b/app/assets/stylesheets/main/sidebar.scss
@@ -2,8 +2,8 @@
   float: left;
   border: 1px solid black;
   width: 75px;
-  height: 1000px;
-  background-color: rgb(223, 223, 223);
+  height: 100vh;
+  background-color: #e4e4e4;
 
   div {
     margin: 10px 0;
@@ -16,3 +16,10 @@
     margin-bottom: 20px;
   }
 }
+
+#sidebar-account {
+  position: sticky;
+  top: 100%;
+  height: 80px;
+}
+
