Add icon images

--- a/app/assets/stylesheets/main/sidebar.scss
+++ b/app/assets/stylesheets/main/sidebar.scss
@@ -5,8 +5,9 @@
   height: 100vh;
   background-color: #e4e4e4;
 
-  div {
-    margin: 10px 0;
+  .sidebar-outer-div {
+    margin: 5px 0;
+    padding: 5px;
     border: 1px solid blue;
     text-align: center;
   }
