Position sliding modal correctly

--- a/app/assets/stylesheets/main/modal.scss
+++ b/app/assets/stylesheets/main/modal.scss
@@ -24,7 +24,7 @@ $delete-notebook: image_url("trash-icon");
   top: 0;
   bottom: 0;
   right: 0;
-  left: 0;
+  left: 75px;
   background: rgba(255, 255, 255, 0.8);
   animation-duration: .5s;
   z-index: 10;
@@ -34,9 +34,12 @@ $delete-notebook: image_url("trash-icon");
   border: 1px solid blue;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 231.5px;
+  height: 100vh;
   transform: translate(-50%, -50%);
 }
+
+
 
 .each-notebook {
   border: 1px solid black;
