--- a/app/assets/stylesheets/main/modal.scss
+++ b/app/assets/stylesheets/main/modal.scss
@@ -67,7 +67,7 @@ $create-notebook: image_url("add-notebook");
         text-transform: uppercase;
         letter-spacing: 0.7px;
         font-weight: 300;
-        color: #878787;
+        color: #929292;
       }
 
       button {
@@ -107,7 +107,7 @@ $create-notebook: image_url("add-notebook");
       font-family: 'Slabo 27px', serif;
       font-size: 18px;
       font-weight: 300;
-      color: #4a4a4a;
+      color: #5f5f5f;
       padding: 5px;
       white-space: nowrap;
       letter-spacing: .5px;
