Start on note list

--- a/app/assets/stylesheets/main/modal.scss
+++ b/app/assets/stylesheets/main/modal.scss
@@ -3,26 +3,6 @@ $delete-notebook-hover: image_url("trash-icon-hover");
 $create-notebook: image_url("add-notebook");
 $notebook: image_url("notebook");
 
-.slide-modal-background {
-  position: fixed;
-  top: 0;
-  right: 1000px;
-  background: rgba(255, 255, 255, 0.8);
-  z-index: 10;
-  transition: 2s;
-  width: 450px;
-}
-
-.slide-modal-child {
-  border-right: 2px solid #dadada;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: 2s;
-  height: 100vh;
-  transform: translate(119%, 0%);
-}
-
 .fade-modal-background {
   position: fixed;
   top: 0;
@@ -155,6 +135,26 @@ $notebook: image_url("notebook");
       background-image: $notebook;
     }
   }
+}
+
+.slide-modal-background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 75px;
+  background: rgba(255, 255, 255, 0.8);
+  animation-duration: .5s;
+  z-index: 10;
+}
+
+.slide-modal-child {
+  border-right: 2px solid #dadada;
+  position: absolute;
+  top: 50%;
+  left: 231.5px;
+  height: 100vh;
+  transform: translate(-50%, -50%);
 }
 
 .all-notebook-list {
